Fix overlap bug, add closed period notice in form, multi table reservations have correct number of people

--- a/app/assets/stylesheets/sulten/lyche.scss
+++ b/app/assets/stylesheets/sulten/lyche.scss
@@ -825,10 +825,10 @@ body.lyche {
   }
 
   .reservation_no_available {
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 18px;
     color: white;
     padding: 20px;
+    text-align: center;
   }
 
   .link-back-when-no-reservations {
